--- a/src/components/blocks/UsersList/UsersList.module.css
+++ b/src/components/blocks/UsersList/UsersList.module.css
@@ -14,4 +14,9 @@
   justify-content: flex-start;
   align-items: center;
   gap: 5px;
+  cursor: pointer;
+}
+
+.user:hover {
+  border: 1px solid black;
 }
