--- a/src/components/blocks/UserCard/UserCard.module.css
+++ b/src/components/blocks/UserCard/UserCard.module.css
@@ -6,7 +6,7 @@
 }
 
 .title {
-  padding: 10px 0;
+  padding: 5px 10px 5px;
   font-size: 20px;
   background-color: cornflowerblue;
   text-align: left;
